fix(ui): update reach tooltip z-index

--- a/packages/ui/globals.css
+++ b/packages/ui/globals.css
@@ -11,8 +11,7 @@
   pointer-events: none;
   position: absolute;
   white-space: nowrap;
-  z-index: 1;
-  @apply animate-slide-up-fade bg-white px-2 py-1 rounded shadow text-xs;
+  @apply animate-slide-up-fade bg-white px-2 py-1 rounded shadow text-xs z-50;
 }
 
 html {
